--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -30,7 +30,7 @@ jobs:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
         run: |
-          supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/lib/database.types.ts
+          supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/integrations/supabase/types.ts
 
       - name: Commit updated types
         run: |
