--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 18
+          node-version: 20
 
       - name: Install dependencies
         run: npm ci
@@ -30,7 +30,7 @@ jobs:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
         run: |
-          supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/integrations/supabase/types.ts
+          npx supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/integrations/supabase/types.ts
 
       - name: Commit updated types
         run: |
