--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -7,32 +7,37 @@ on:
   workflow_dispatch:
 
 jobs:
-  gen_types:
+  generate-types:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout the repository
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      # 2️⃣ Setup Node.js 20 (required for Supabase CLI)
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
 
-      - name: Install dependencies
+      # 3️⃣ Install dependencies (including Supabase CLI as dev dependency)
+      - name: Install npm dependencies
         run: npm ci
 
-      - name: Install Supabase CLI
-        run: npm install -g supabase
-
-      - name: Generate Supabase types
+      # 4️⃣ Generate Supabase types using npx
+      - name: Generate database types
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
           SUPABASE_PROJECT_ID: ${{ secrets.SUPABASE_PROJECT_ID }}
         run: |
-          npx supabase gen types typescript --project-id $SUPABASE_PROJECT_ID > src/integrations/supabase/types.ts
+          mkdir -p src/lib
+          npx supabase gen types typescript \
+            --project-id $SUPABASE_PROJECT_ID \
+            > src/lib/database.types.ts
 
-      - name: Commit updated types
+      # 5️⃣ Commit updated types if changed
+      - name: Commit generated types
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
