--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -29,11 +29,18 @@ jobs:
         run: |
           supabase gen types --project-id ${{ secrets.SUPABASE_PROJECT_ID }} > src/lib/types.ts
 
-      - name: Commit and push changes
+      - name: Commit changes
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add src/lib/types.ts
-
           git commit -m "chore: regenerate Supabase types" || echo "No changes to commit"
+
+      - name: Pull latest before pushing (fix fast-forward errors)
+        run: |
+          git pull --rebase origin main || true
+
+      - name: Push changes
+        run: |
           git push origin HEAD:main
+
