--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
         run: |
-          supabase gen types --project-id ${{ secrets.SUPABASE_PROJECT_ID }} > src/lib/types.ts
+          supabase gen types --project-id ${{ secrets.SUPABASE_PROJECT_ID }} > src/types/database.ts
 
       - name: Commit changes
         run: |
