--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -28,19 +28,31 @@ jobs:
         env:
           SUPABASE_ACCESS_TOKEN: ${{ secrets.SUPABASE_ACCESS_TOKEN }}
         run: |
-          supabase gen types --project-id ${{ secrets.SUPABASE_PROJECT_ID }} > src/types/database.ts
+          supabase gen types typescript --project-id ${{ secrets.SUPABASE_PROJECT_ID }} > src/types/database.ts
+
+      - name: Check for changes
+        id: check-changes
+        run: |
+          if [ -n "$(git status --porcelain src/types/database.ts)" ]; then
+            echo "has_changes=true" >> $GITHUB_OUTPUT
+          else
+            echo "has_changes=false" >> $GITHUB_OUTPUT
+          fi
 
       - name: Commit changes
+        if: steps.check-changes.outputs.has_changes == 'true'
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add src/lib/types.ts
-          git commit -m "chore: regenerate Supabase types" || echo "No changes to commit"
+          git add src/types/database.ts
+          git commit -m "chore: regenerate Supabase types [skip ci]"
 
       - name: Pull latest before pushing (fix fast-forward errors)
+        if: steps.check-changes.outputs.has_changes == 'true'
         run: |
           git pull --rebase origin main || true
 
       - name: Push changes
+        if: steps.check-changes.outputs.has_changes == 'true'
         run: |
           git push origin HEAD:main
