optimise repository for speedf

--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "globals": "^15.15.0",
     "lovable-tagger": "^1.1.11",
     "postcss": "^8.5.6",
+    "rollup-plugin-visualizer": "^6.0.5",
     "supabase": "^2.58.5",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3",
