--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,13 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Capacitor / Mobile
+ios/App/Pods/
+ios/App/build/
+ios/App/DerivedData/
+android/app/build/
+android/.gradle/
+android/local.properties
+*.jks
+*.keystore
